EKSDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodeserver
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nodeserver
    spec:
      containers:
      - name: nodeserver
        image: 954636261957.dkr.ecr.eu-west-1.amazonaws.com/exersice-docker-image:latest
        ports:
        - containerPort: 80
