prod-admin-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: sibros-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: sibros
